--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
-    "@supabase/supabase-js": "^2",
-"@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/supabase-js": "^2"
+"@supabase/auth-helpers-nextjs": "^0.8.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
