--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
-    "@supabase/supabase-js": "^2"
+    "@supabase/supabase-js": "^2",
 "@supabase/auth-helpers-nextjs": "^0.8.7"
   },
   "devDependencies": {
