--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
-    "@supabase/supabase-js": "^2",
-"@supabase/auth-helpers-nextjs": "^0.8.7"
+    "react-dom": "19.2.3",
+    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/auth-helpers-nextjs": "^0.8.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
